tests/error/poly_errors/arg_mismatch1.err
Error: Type mismatch (at $FILE:17:11)
   | 
15 | @guppy(module)
16 | def main(x: bool, y: tuple[bool]) -> None:
17 |     foo(x, y)
   |            ^ Expected argument of type `bool`, got `(bool)`

Guppy compilation failed due to 1 previous error
